# spyCNV

./: .gitignore  README.md  devenv.nix  flake.nix  pyproject.toml
src/spyCNV/: api.py  cli.py  core.py
src/spyCNV/data/: refSeq_genes_scored_compressed.hg19.tsv  refSeq_genes_scored_compressed.hg38.tsv
src/spyCNV/io/: loaders.py
src/spyCNV/plots/: bAlleleFrequencyTrack.js  geneAnnotationTrack.js  ideogramTrack.js  logratioTrack.js  segmentTrack.js
src/spyCNV/static/: genome-spy_core@0.64.x.js  genome-spy_core@0.70.0.js  genome-spy_core@0.75.0.js
src/spyCNV/templates/: base.html.jinja2
tests/data/: MXX-ABCDT-genes.cns  MXX-ABCDT.cnr  MXX-ABCDT.hard-filtered.vcf  MXX-ABCDT.seg.called.merged  MXX-ABCDT.vaf.pass.vcf  MXX-ABCDT_HRD.cnr  MXX-ABCDT_HRD.vcf  MXX-ABCDT_bAllele.tsv  MXX-ABCDT_logRatio.tsv  SXX-XXXT.seg.called.merged  SXX-XXXT_bAllele.tsv  SXX-XXXT_logRatio.tsv
tests/spyCNV/: test_core.py
tests/spyCNV/io/: test_loaders.py
