[project]
name = "spyCNV"
version = "0.3.0"
requires-python = ">=3.13"
dependencies = [
    "jinja2",
    "pydantic",
    "typer",
]

[dependency-groups]
dev = [ "pytest" ]

[project.scripts]
spy = "spyCNV.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
